--- a/Resume-project/stylesheet.css
+++ b/Resume-project/stylesheet.css
@@ -136,11 +136,18 @@ html {
 
 footer {
   text-align: center;
-  padding: 3px;
+  padding-top: 3px;
+  padding-bottom: 0px;
   background-color: white;
   color: black;
 }
 
 #illustrations {
   text-align: center;
+}
+
+#container {
+  width:100%;
+  max-width:1443px;
+  margin:0 auto;
 }
