--- a/final project/style.css
+++ b/final project/style.css
@@ -25,7 +25,7 @@ p {
 font-family: 'Montserrat', sans-serif;
 font-size:13.5px;
 font-style; normal;
-color: #A8A8A8;
+color: #708090;
 margin-right: 150px;
 margin-left: 150px;
 }
@@ -91,3 +91,15 @@ html {
   #grad {
     background-image: linear-gradient(to right, #e39ec0, #95a8e2);
   }
+
+  /* Extra small devices (phones, less than 768px) */
+  /* No media query since this is the default in Bootstrap */
+
+  /* Small devices (tablets, 768px and up) */
+  @media (min-width: @screen-sm-min) { 750px }
+
+  /* Medium devices (desktops, 992px and up) */
+  @media (min-width: @screen-md-min) { 970px }
+
+  /* Large devices (large desktops, 1200px and up) */
+  @media (min-width: @screen-lg-min) { 1170px }
