--- a/final project/style.css
+++ b/final project/style.css
@@ -25,7 +25,7 @@ p {
 font-family: 'Montserrat', sans-serif;
 font-size:13.5px;
 font-style; normal;
-color: #708090;
+color: #2c2529;
 margin-right: 150px;
 margin-left: 150px;
 }
